# analyzer

./: README.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  wait-for-db.sh
backend/.devcontainer/: Dockerfile.local  devcontainer.env.example  devcontainer.json  docker-compose.local.yml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/domain/entities/: entities.py  enums.py
backend/app/domain/interfaces/analyzers/: trading_analyzer_interface.py
backend/app/domain/interfaces/brokers/: brokers_interface.py
backend/app/domain/interfaces/parsers/: csv_parser_interface.py  response_parser_interface.py
backend/app/domain/interfaces/presenters/: presenter_interface.py
backend/app/domain/interfaces/providers/: home_broker_interface.py
backend/app/domain/interfaces/repositories/: README.md  operations_repository_interface.py
backend/app/domain/use_cases/: delete_positions_use_case.py  get_positions_use_case.py  treat_csv_use_case.py  update_positions_use_case.py
backend/app/infrastructure/analyzers/: analyzer_home_broker_data.py
backend/app/infrastructure/analyzers/strategies/: fifo_strategy.py
backend/app/infrastructure/api/: main_routes.py  schemas.py
backend/app/infrastructure/db/: main.py
backend/app/infrastructure/db/postgresql/: database.py  models.py  tortoise_config.py
backend/app/infrastructure/logger/: logger.py
backend/app/infrastructure/mcp/: tools.py
backend/app/infrastructure/parsers/: csv_parser_portfolio.py  positions_response_parser.py
backend/app/infrastructure/providers/: README.md
(+82 files in other folders)
